<resources>
    <string name="app_name">Test Application – Firebase</string>
    <string name="id">Enter Your ID</string>
    <string name="name">Enter Your Name</string>
    <string name="adress">Enter Your Address</string>
    <string name="contactNo">Enter Your Contact Number</string>
    <string name="save">SAVE</string>
    <string name="show">SHOW</string>
    <string name="Update">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>
